# aioli-nodes

./: .gitignore  CLAUDE.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
examples/: WF_Inpaint_aioli-nodes.json  WF_Inpaint_aioli-nodes_ComfyCloud.json  WF_Inpaint_aioli-subgraph_ComfyCloud_Flux2Klein.json  WF_Inpaint_aioli-subgraph_ComfyCloud_QwenImageEdit_2511.json  WF_Inpaint_aioli-subgraph_ComfyCloud_nano-banana  WF_Inpaint_aioli-subgraph_ComfyCloud_nano-banana.json  aioli_INPAINT_Img_Flux2_Klein_multi-region-edit.json
nodes/: bbox_assembler.py  bbox_fix.py  inpaint_color_fix.py  mask_split_regions.py  ratio_outpaint.py  region_mask_list.py  region_preview.py  regional_conditioning.py
