[project]
name = "aioli-nodes"
version = "1.0.9"
description = "Custom nodes for ComfyUI — Ratio Outpaint Calc, BBox Multiple Fix, Inpaint Color Fix"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/aiolicollective/aioli-nodes"

[tool.comfy]
PublisherId = "aiolicollective"
DisplayName = "Aioli Nodes"
Icon = ""
