[project]
name = "aioli-nodes"
version = "1.5.2"
description = "Custom nodes for ComfyUI — Ratio Outpaint Calc, BBox Multiple Fix, Inpaint Color Fix, BBox Multiple Assembler, Regional Mask Conditioning, Region Mask List, Mask Split Regions, Region Preview"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/aiolicollective/aioli-nodes"

[tool.comfy]
PublisherId = "aiolicollective"
DisplayName = "Aioli Nodes"
Icon = ""
